@@ -250,6 +250,11 @@ signature that can be verified either with the user's
 of the official Debian keyrings
 (\fI/usr/share/keyrings/debian\-keyring.gpg\fP
 and \fI/usr/share/keyrings/debian\-maintainers.gpg\fP).
+.TP
+.B \-\-ignore\-bad\-version
+Turns the bad source package version check into a non-fatal warning.
+This option should only be necessary when extracting ancient source
+packages with broken versions, just for backwards compatibility.
 
 .SH SOURCE PACKAGE FORMATS
 If you don't know what source format to use, you should probably pick
