@@ -30,6 +30,8 @@ dpkg (1.17.7) UNRELEASED; urgency=low
   * Improve dpkg-source warning message when ignoring file removals,
     by adding a hint about the --include-removal option.
     Thanks to Moritz Muehlenhoff <jmm@debian.org>. Closes: #738310
+  * Add a new dpkg-source extraction --ignore-bad-version option.
+    Closes: #740883
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
